--- a/typescript-project/index.html
+++ b/typescript-project/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="meritxell jordan">
-    <title>Acudiits</title>
+    <title>Get a joke</title>
 </head>
 <body>
-    <main>
-        <div id="acudit">
-            <button type="button" onclick="">Another joke</button>
+    <div id="joke"></div>
+    <div id="button">
+        <button type="button" onclick="getJoke()">Next joke</button>
+    </div>
+    
 
-        </div>
-    </main>
+
+    <script src="build/index.js"></script>
     
 </body>
 </html>
