--- a/typescript-project/index.html
+++ b/typescript-project/index.html
@@ -6,7 +6,7 @@
     <title>Get a joke</title>
 </head>
 <body>
-    <div id="joke"></div>
+    <div id="result"></div>
     <div id="button">
         <button type="button" onclick="getJoke()">Next joke</button>
     </div>
