estructura bàsica html

--- a/typescript-project/index.html
+++ b/typescript-project/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get a joke</title>
 </head>
-<body>
-    <div id="result"></div>
-    <div id="button">
-        <button type="button" onclick="getJoke()">Next joke</button>
-    </div>
+<body class="container">
+    <header></header>
+    <main>
+        <h1>Preparat per riure?</h1>
+        <div id="result"></div>
+        <div id="button">
+            <button type="button" onclick="getJoke()">Següent acudit</button>
+        </div>
+    </main>
     
-
-
     <script src="build/index.js"></script>
     
 </body>
