--- a/typescript-project/index.html
+++ b/typescript-project/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Get a joke</title>
 </head>
 <body class="container">
-    <header></header>
-    <main>
-        <h1>Preparat per riure?</h1>
-        <div id="result"></div>
-        <div id="button">
+    <header>
+       <div class="weather">Avui:parcialment ennuvolat</div>
+    </header>
+    </main>
+        <div class="card">
+            <h1>Preparat per riure?</h1>
+            <div id="result"></div>
             <button type="button" onclick="getJoke()">Següent acudit</button>
         </div>
     </main>
