added weather id

--- a/typescript-project/index.html
+++ b/typescript-project/index.html
@@ -8,12 +8,12 @@
 </head>
 <body class="container">
     <header>
-       <div class="weather">Avui:parcialment ennuvolat</div>
+       <div id="weather" class="weather"></div>
     </header>
     </main>
         <div class="card">
             <h1>Preparat per riure?</h1>
-            <div id="result"></div>
+            <div id="joke"></div>
             <div>
                 <button class="btn_rating" value="1" onclick="recieveScore(1)">1</button>
                 <button class="btn_rating" value="2" onclick="recieveScore(2)">2</button>
